# DebtTrackerTelegramBotV2

./: .env.sample  Cargo.toml  README.md
migrations/2022-07-01-102900_initial_setup/: down.sql  up.sql
src/: main.rs
src/helpers/: cycle_detector.rs  data_handler.rs  ledger_handler.rs  message_validator.rs  mod.rs  text_helper.rs  transaction_handler.rs
src/types/: app_user.rs  chat.rs  graph.rs  ledger.rs  mod.rs  schema.rs  transaction.rs  transaction_type.rs  user.rs
