[package]
name = "debt_tracket_telegram_bot_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
once_cell = "1.10.0" # lazy mutex
serde_any = "0.5.0" # JSON save and load to FS
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } # date
diesel = { version = "1.4.8", features = ["sqlite", "uuid", "r2d2"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde_json = "1.0.82"
derive_more = "0.99.17"
strum = { version = "0.24", features = ["derive"] } # serialize enums